tests/compile-fail/if-no-braces.plk
fn foo() {
    if (true)
        putc('!'); // ERROR: expected one of

    while (false)
        putc('!'); // ERROR: expected one of
}